<resources>
    <string name="app_name">Smart-Drip-Irrigation-and-Detecting-Fire-System</string>
    <string name="btnDirtCheck_en">Dirt Check</string>
    <string name="btnDirtCheck_tr">Toprak Kontrolü</string>
    <string name="btnAirTemperature_en">Air Temperature</string>
    <string name="btnAirTemperature_tr">Hava Sıcaklığı</string>
    <string name="btnAirHumidity_en">Air Humidity</string>
    <string name="btnAirHumidity_tr">Hava Nem Durumu</string>
    <string name="btnSmokeDensity_en">Smoke Density</string>
    <string name="btnSmokeDensity_tr">Duman Yoğunluğu</string>
    <string name="btnPowerOff_en">Power Off</string>
    <string name="btnPowerOff_tr">Güç Kapalı</string>
    <string name="btnPowerOn_en">Power On</string>
    <string name="btnPowerOn_tr">Güç Açık</string>
    <string name="txtWelcome_en">Welcome,User!</string>
    <string name="txtWelcome_tr">Hoşgeldiniz!</string>
</resources>